--- a/index.css
+++ b/index.css
@@ -4,6 +4,21 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     min-width: 400px;
 }
+h1 {
+    color: #d63dba;
+}
+div {
+    margin-top: 20px;
+}
+
+#color-btn {
+    background: white;
+    color: #d63dba;
+}
+#color-btn:hover {
+
+    background: rgb(198, 198, 198);
+}
 
 input {
     width: 100%;
@@ -21,9 +36,15 @@ button {
     font-weight: bold;
 }
 
+
+
 #delete-btn {
     background: white;
     color: #d63dba;
+}
+
+#delete-btn:hover {
+    background: rgb(198, 198, 198);
 }
 
 ul {
@@ -37,7 +58,7 @@ li {
 }
 
 a {
-    color: #5f9341;
+    color: #d63dba;
 }
 
 
